Annotation UI page: AJAX post request of uploaded image

--- a/annotation_ui/annotation_ui/src/App.css
+++ b/annotation_ui/annotation_ui/src/App.css
@@ -8,3 +8,19 @@
   padding: 20px;
   color: white;
 }
+
+.ImgUploader {
+    text-align: center;
+}
+
+input {
+    text-align: right;
+    border: dashed black 1px;
+}
+
+.imgPreview {
+    padding:1px;
+    border:1px solid #021a40;
+    height: 400px;
+    width: 200px;
+}
