Clear all fields when changing screens

--- a/api_server/views/index.html
+++ b/api_server/views/index.html
@@ -285,6 +285,8 @@
 		$('#username_signup').val("");
 		$('#password_signup').val("");
 		$('#code_signup').val("");
+		$('#signup-error-messages').val("");
+		$('#login-error-messages').val("");
 	}
 
 	var showWelcomePleasantries = function() {
