Correct minor error in argmax calculation

--- a/api_server/views/index.html
+++ b/api_server/views/index.html
@@ -261,7 +261,7 @@
 						var argmax, maxval = 0.0;
 						for (var item in list) {
 							if (list[item] > maxval) {
-								maxval = item;
+								maxval = list[item];
 								argmax = item;
 							}
 						}
