--- a/api_server/views/index.html
+++ b/api_server/views/index.html
@@ -158,7 +158,7 @@
 			</select>
 
 			<div class="uploader">
-			    <h2 class="h2">click here to upload or drag your image here</h2>
+			    <h2 class="h2" style="padding:15px">click here to upload or drag your image here</h2>
 			    <img src="" id="uploaded-image-preview" />
 			    <input type="file" name="image" id="filePhoto" onchange="handleImage(this)"/>
 			</div>
@@ -167,7 +167,7 @@
 			<div class="col-md-12 col-xs-12" style="margin-top:10px">
 		      <button style="width:100%" class="btn btn-default" id="sendGradeButton" onclick="doCloudGrading()" disabled="true">Grade</button>
 		    </div>
-		    <div class="col-md-10"><img id="loading-server-grade" style="width:100%; opacity:0" src="/img/loading.gif"/></div>
+		    <div class="col-md-10 col-xs-12"><img id="loading-server-grade" style="width:100%; opacity:0" src="/img/loading.gif"/></div>
 	      <p style="margin-top:15px; color:red" id="grading-error-messages"></p>
 	      <h3 class="h3">Prediction: <span id="prediction" class="prediction_text"></span></h3>
 	      <table class="table table-bordered table-hover" id='gprobs'>
